--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,9 @@ set -g prefix C-t
 # C-bのキーバインドを解除
 unbind C-b
 
-# ステータスバーをボトムに配置する
-set-option -g status-position bottom 
+
+# ステータスバーをトップに配置する
+set-option -g status-position top 
 
 # 左右のステータスバーの長さを決定する 
 set-option -g status-left-length 90
@@ -25,9 +26,10 @@ set-option -g status-right-length 90
 # 最左に表示
 set-option -g status-left '#H:[#P]'
 
-# Wi-Fi、バッテリー残量、現在時刻
+# ステータスバー
+# CPU、Wi-Fi、バッテリー残量、現在時刻
 # 最右に表示
-set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right '#{prefix_highlight} CPU:#{cpu_percentage}|MEM:#{ram_percentage}|Batt:#{battery_percentage} [%Y-%m-%d(%a) %H:%M]'
 
 # ステータスバーを1秒毎に描画し直す
 set-option -g status-interval 1
@@ -40,24 +42,6 @@ set-option -g status-bg "colour238"
 
 # status line の文字色を指定する。
 set-option -g status-fg "colour255"
-
-# vimのキーバインドでペインを移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# vimのキーバインドでペインをリサイズする
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# | でペインを縦分割する
-bind | split-window -h
-
-# - でペインを縦分割する
-bind - split-window -v
 
 # 番号基準値を変更
 set-option -g base-index 1
@@ -88,3 +72,25 @@ bind -T copy-mode-vi Y send -X copy-line
 # 'C-p'でペースト
 bind-key C-p paste-buffer
 
+# プラグイン管理
+# Initial Setup
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm' #プラグインマネージャ
+set -g @plugin 'tmux-plugins/tmux-sensible' #基本設定
+set -g @plugin 'tmux-plugins/tmux-pain-control' #ペインコントロール
+set -g @plugin 'tmux-plugins/tmux-battery' #バッテリー残量
+set -g @plugin 'tmux-plugins/tmux-cpu' #CPU使用率
+set -g @plugin 'tmux-plugins/tmux-resurrect' #セッション保存/復元
+set -g @plugin 'tmux-plugins/tmux-continuum' #15分毎に自動保存
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-logging'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
